--- a/app/android/.settings/org.eclipse.buildship.core.prefs
+++ b/app/android/.settings/org.eclipse.buildship.core.prefs
@@ -1,11 +1,11 @@
 arguments=
 auto.sync=false
 build.scans.enabled=false
-connection.gradle.distribution=GRADLE_DISTRIBUTION(WRAPPER)
+connection.gradle.distribution=GRADLE_DISTRIBUTION(VERSION(7.0-rc-1))
 connection.project.dir=
 eclipse.preferences.version=1
 gradle.user.home=
-java.home=/Library/Java/JavaVirtualMachines/jdk-14.0.2.jdk/Contents/Home
+java.home=C\:/Program Files/Java/jdk-15.0.1
 jvm.arguments=
 offline.mode=false
 override.workspace.settings=true
