--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  fl_chart: ^0.40.2
   flutter:
     sdk: flutter
 
@@ -57,6 +58,11 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - best_streak.png
+    - curr_streak.png
+    - total_days_donated.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
