--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animations: ^2.0.0
   path_drawing: ^0.4.1
   settings_ui: ^1.0.0
+  curved_navigation_bar: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +67,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/hotel/
     - best_streak.png
     - curr_streak.png
     - total_days_donated.png
