--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
     - total_days_donated.png
     - assets/heart-hand-color.png
     - assets/Elderly-Poor-Singapore.png
+    - homepage.png
 
 
   # To add assets to your application, add an assets section, like this:
