--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -67,6 +67,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/
     - assets/hotel/
     - best_streak.png
     - curr_streak.png
