--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -75,6 +75,7 @@ flutter:
     - assets/heart-hand-color.png
     - assets/Elderly-Poor-Singapore.png
     - homepage.png
+    - challenges.png
 
 
   # To add assets to your application, add an assets section, like this:
